# TableauxRocq

./: .dir-locals.el  .gitignore  CHANGELOG.md  GRAMMAR.md  Makefile  README.md  TableauxRocq.opam  _RocqProject  configure.sh  flake.nix  nixpkgs.nix  shell.nix
.github/workflows/: build-on-pull-requests.yml  deploy-documentation.yml
checker/: dune-project
checker/lib/: dune  grammar.ml  grammar.mli  lexer.mll  parser.mly  prelude.ml  prelude.mli  printer.ml  printer.mli
devtools/: clean-extraction.sh  configure.sh  make-index.sh  nixpkgs.nix  poulet.nix  rocq-tableaux.nix  run-poulet-tests.py  run-rocq-tests.sh  run-tests.sh  test_compile.v
devtools/tests/: all.v  and.v  contra.v  (+25 more)
examples/: branching.v  drinker.v
master/: Tableaux.All.html  Tableaux.ExtendedSyntax.html  Tableaux.Prelude.All.html  Tableaux.Prelude.Atoms.html  Tableaux.Prelude.Init.html  Tableaux.Prelude.LocallyNamelessClasses.html  Tableaux.Prelude.SetInstances.html  Tableaux.Semantics.html  Tableaux.Skolemization.html  Tableaux.SkolemizationInstances.html  Tableaux.Syntax.html  Tableaux.SyntaxInstance.html  branching.html  drinker.html  index.html  indexpage.html  toc.html
tests/: instantiate_apply.v  perfs_1.v
theories/: ATPCompat.v  All.v  Checker.v  Core.v  ExtendedSyntax.v  Extraction.v  Prelude.v  ProofInstance.v  Proofs.v  Reflect.v  Semantics.v  Skolemization.v  SkolemizationInstances.v  Syntax.v  SyntaxInstance.v
v0.1-ITP26/: Tableaux.Checker.html  Tableaux.Core.html  Tableaux.Prelude.Classes.html  Tableaux.Prelude.Utils.html  Tableaux.Syntax.html  index.html  indexpage.html
(+80 files in other folders)
